--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,6 +1,8 @@
 name: Python application
 
 on:
+  push:
+    branches: [ main ]
   pull_request:
     branches: [ main ]
 
@@ -21,4 +23,4 @@ jobs:
         pip install pytest
     - name: Test with pytest
       run: |
-        pytest test_calculator.py
+        pytest test_calculator.py test_integration_calculator.py
